# diabetes-prediction-dashboard

./: pyproject.toml  requirements.txt
