[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.58.0",
    dependencies = [
    "streamlit>=1.38.0",
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib",
    "plotly",
]
]

[tool.uv]
package = false
